Add git repo link and keywords.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,40 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/reckscott/hd-keychain"
+  },
+  "keywords": [
+    "hd wallet",
+    "hdwallet",
+    "hd-wallet",
+    "hierarchical deterministic",
+    "bitcoin",
+    "btc",
+    "altcoin",
+    "crypto currency",
+    "ethereum",
+    "eth",
+    "ripple",
+    "xrp",
+    "bitcoin cash",
+    "bch",
+    "litecoin",
+    "ltc",
+    "dash",
+    "dsh",
+    "nem",
+    "bitconnect",
+    "bcc",
+    "neo",
+    "monero",
+    "xmr",
+    "iota",
+    "iot",
+    "ethereum classic",
+    "etc"
+  ],
   "license": "MIT",
   "dependencies": {
     "bip39": "^2.4.0",
